feat: 파일에서 데이터베이스 방식으로 최중 구현 완료