@@ -1,10 +1,12 @@
 package com.finaljavaproject.www.service;
 
-import com.finaljavaproject.www.domain.Category;
-import com.finaljavaproject.www.repository.Repository;
-
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
+import com.finaljavaproject.www.domain.Category;
+import com.finaljavaproject.www.repository.Repository;
 
 public class CategoryService extends AbstractService<Category, String>{
 
@@ -30,40 +32,38 @@ public class CategoryService extends AbstractService<Category, String>{
             return;
         }
         
-        if(category.getParent() == null){
+        if(category.getParentId() == null){
             boolean hasChildren = categories.stream()
-                            .anyMatch(c ->c.getParent()!= null && c.getParent().getCategoryId().equalsIgnoreCase(id));
+                            .anyMatch(c -> Objects.equals(c.getParentId(), id));
             if(hasChildren){
                 System.out.println("하위 카테고리가 있는 대분류는 지울 수 없습니다.");
+                return;
             }
-            repository.deleteById(id);
-
-        } else{
-            repository.deleteById(id);
-            System.out.println("카테고리를 지웠습니다.");
-        }
+        } 
+        repository.deleteById(id);
+        System.out.println("카테고리를 삭제했습니다.");
     }
 
     //모든 카테고리 대, 중 분류 구분없이 가져오는 메서드
     public List<Category> getAllCategoriesOrdered(){
         return repository.findAll().stream()
-                .sorted(Comparator.comparing(Category::getSortOrder))
+                .sorted(Comparator.comparing(Category::getSortOrder, Comparator.nullsLast(Comparator.naturalOrder())))
                 .toList();
     }
 
     //모든 중 분류들을 가져오는 메서드
     public List<Category> getChildren(String parentId) {
         return repository.findAll().stream()
-                .filter(c -> c.getParent() != null && c.getParent().getCategoryId().equals(parentId))
-                .toList();
+                .filter(c ->  Objects.equals(c.getParentId(), parentId))
+                .collect(Collectors.toList());
     }
 
     //모든 대 분류들을 가져오는 메서드
     public List<Category> getMainCategories() {
         return repository.findAll().stream()
-                .filter(c -> c.getParent().getCategoryId() == null)
+                .filter(c -> c.getParentId() == null)
                 .sorted(Comparator.comparing(Category::getSortOrder))
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
